--- a/README
+++ b/README
@@ -24,6 +24,8 @@ per node some specific things are processed:
 		* manual review needed, because all html tags currently accepted
 		* PB doesn't support comment threading and comment titles, though the data is exported
 		* Comments with uid 1 (blog owner) have no url/email set, just nick.  PB should support automatically rendering the correct url
+		* all entities get replaced by their references (except stuff in CDATA tags), because PB comments plugin expects literal text in description
+		* comments support source code hilighting (if you have a patched PB comments plugin to call the syntaxhilight plugin)
 	* source code: exported for syntaxhilight.py plugin (which uses pygments).  note:
 		* most of the 'lang' attributes map perfectly ('php', 'bash', 'sql', etc), but for php embedded in html, you need to manually update to html+php
 		* also, pygments is fairly strict and we can't control options like startinline (just the lexer name), so you might need to manually wrap your php code
